Fixed line-breaks in list part

--- a/style/basic/css/part_list.css
+++ b/style/basic/css/part_list.css
@@ -67,7 +67,7 @@ div.part_list h3
 
 p.part_list_text
 {
-	margin: 0;
+	margin: 0px 0px 5px;
 	font-size: 12px;
 	color: #666;
 }
